<resources>
    <string name="app_name">Lazos Pet Shop</string>

    <string name="logLblCorreo">Correo</string>
    <string name="logLblContraseña">Contraseña</string>
    <string name="logTxtHintCorreo">Ingrese su correo</string>
    <string name="logTxtHintContraseña">Ingrese su contraseña</string>
    <string name="logBtnIniciar">Iniciar</string>
    <string name="logBtnRegistrate">Regístrate</string>
    <string name="logChkRecordar">Recordar Clave</string>
    <string name="logLblOlvidarContraseña">¿Olvidaste la contraseña?</string>
    <string name="perLblSaludo">Bienvenido</string>
    <string name="perLblProducto">Productos</string>
    <string name="perLblCategoria">Categoria</string>
    <string name="app_registro">Registro</string>
    <string name="app_detallepago">Detalle de Pago</string>
    <string name="btnSubImagen">Subir Imagen</string>
    <string name="logLblCopyright">Derechos Reservados Linux Poons - 2023</string>
    <string name="txt_nombreRegistro">Nombres</string>
    <string name="txt_nombreDetalle">Nombres</string>
    <string name="txt_numeroTarjeta">Número Tarjeta</string>
    <string name="txt_apellidosRegistro">Apellidos</string>
    <string name="txt_tipoDocumentoRegistro">Tipo Documento</string>
    <string name="txt_numeroDocumentoRegistro">Número Documento</string>
    <string name="txt_generoRegistro">Género</string>
    <string name="txt_correoRegistro">Correo</string>
    <string name="txt_contraRegistro">Contraseña</string>
    <string name="txt_contrarepetirRegistro">Repetir Contraseña</string>
    <string name="txt_nombretitular">Nombre del Titular</string>
    <string name="regTxtHintNombre">Ingrese sus Nombres</string>
    <string name="regTxtHintApellido">Ingrese sus Apellidos</string>
    <string name="regTxtHintnumeroDocumento">Ingrese Documento</string>
    <string name="regTxtHintCorreoRegistro">Ingrese su correo</string>
    <string name="regTxtHintContraRegistro">Ingrese su contraseña</string>
    <string name="regTxtHintContraRepetirRegistro">Repita su contraseña</string>
    <string name="rbmasculino">Masculino</string>
    <string name="rbfemenino">Femenino</string>
    <string name="rbnoSinDefinir">Sin Definir</string>
    <string name="rbEfectivo">Efectivo</string>
    <string name="rbnTarjeta">Tarjeta crédito/débito</string>
    <string name="rbMacho">Macho</string>
    <string name="rbHembra">Hembra</string>
    <string name="btnRegistrarRegistro">Registrarse</string>
    <string name="btnVolverRegistro">Volver</string>
    <string name="btnPagar">Pagar</string>
    <string name="detTxtHintNombre">Ingrese sus Nombres</string>
    <string name="detTxtHintApellido">Ingrese sus Apellidos</string>
    <string name="detTxtHintnumeroDocumento">Ingrese Documento</string>
    <string name="detTxtHintNumeroTarjeta">Ingrese número tarjeta</string>
    <string name="detTxtHintCcv">CCV</string>
    <string name="detTxtHintVencimientoTarjeta">MM/YYYY</string>
    <string name="detTxtHintNombreTitular">Ingrese Nombre Titular</string>
    <string name="app_complemento">Complemento</string>
    <string name="btnComplemen1">Porta Gatos S/15.00</string>
    <string name="btnComplemen2">Jaula Hamster S/15.00</string>
    <string name="btnComplemen3">Jaula Aves S/15.00</string>
    <string name="btnComplemen4">Plato para perros S/35.00</string>
    <string name="btnComplemen5">Porta Perros S/15.00</string>
    <string name="btnComplemen6">Canguro perros S/15.00</string>
    <string name="btnComi1">15kg ProPlan P S/170.00</string>
    <string name="btnComi2">3kg ProPlan G S/45.00</string>
    <string name="btnComi3">3kg Cambo Carros S/40.00</string>
    <string name="btnComi4">7kg Ricocan Adultos S/69.00</string>
    <string name="btnComi5">7kg Ricocat Adulto S/56.00</string>
    <string name="btnComi6">3Kg Dog Chow Adultos S/38.00</string>
    <string name="btnRop1">Poncho perro S/15.00"</string>
    <string name="btnRop2">Abrigo gato S/15.00</string>
    <string name="btnRop3">Bufanda alianza lima S/15.00</string>
    <string name="btnRop4">Disfras Leon perro S/15.00</string>
    <string name="btnRop5">Disfras Woody perro S/15.00</string>
    <string name="btnRop6">Disfras minion perro S/15.00</string>
    <string name="btnJug1">Hueso de plastico S/15.00"</string>
    <string name="btnJug2">Pelota de plastico S/10.00</string>
    <string name="btnJug3">Juguete de plumas S/7.00</string>
    <string name="btnJug4">Juguete para aves S/17.00</string>
    <string name="btnJug5">Juguete de Rueda S/20.00</string>
    <string name="btnJug6">Juguete de Accecan S/13.00</string>
    <string name="btnRgMascota">Registrar Mascota</string>
    <string name="btnBorrar">Borrar</string>
    <string name="btnOrdenarCompra">Ordenar!</string>
    <string name="btnSeguirCompra">Seguir Comprando</string>
    <string name="OlvLblTitulo">Recuperar Contraseña</string>
    <string name="OlvtxtNuevaClave">Correo Electrónico</string>
    <string name="OlvtxtConfirmarClave">Confirmar Clave</string>
    <string name="OlvbtnVolver">Volver</string>
    <string name="OlvbtnActualizar">Actualizar</string>
    <string name="pertxtUbicacion">Ubicación</string>
    <string name="pertxtConfiguracion">Configuración</string>
    <string name="pertxtRegistraMascota">Registrar Mascota</string>
    <string name="pertxtNuestrosProductos">Nuestros Productos</string>
    <string name="pertxtSolicitaServicio">Solicitar Servicio</string>
    <string name="CfgLblTitulo">Configuración</string>
    <string name="CfgtxtNuevaClave">Nueva Clave</string>
    <string name="CfgtxtConfirmarClave">Confirmar Clave</string>
    <string name="CfgbtnCerrarSesion">Cerrar Sesión</string>
    <string name="CfgbtnActualizar">Actualizar</string>
    <string name="TitulotxtMascota">Registra Mascota</string>
    <string name="BtnSubirImagen">Subir Imagen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>