<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEEEEEE"
    tools:context=".actividades.IniciarSesionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:textSize="40sp"
            android:text="@string/app_name">
        </TextView>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"></ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/logTxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/logTxtHintCorreo"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="70dp">
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/logTxtContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/logTxtHintContraseña"
                android:inputType="textPassword"
                android:layout_marginBottom="15dp"
                android:layout_marginHorizontal="70dp">

            </EditText>


        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/logChkRecordar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logChkRecordar"
            android:layout_marginBottom="15dp"
            android:layout_marginHorizontal="70dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="50dp">


            <Button
                android:id="@+id/logBtnIniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logBtnIniciar"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:textAllCaps="false">
            </Button>

            <Button
                android:id="@+id/logBtnRegistrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="30dp"
                android:text="@string/logBtnRegistrate"
                android:layout_weight="1"
                android:textAllCaps="false">
            </Button>
        </LinearLayout>

        <Button
            android:id="@+id/logLblOlvidarContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/logLblOlvidarContraseña"
            android:background="@android:color/transparent"
            android:textColor="#151515">
        </Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:layout_marginBottom="10dp"
            android:text="@string/logLblCopyright"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>