<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.RegistroActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="240dp"
            android:layout_marginBottom="10dp"
            android:textSize="35sp"
            android:text="@string/app_registro">
        </TextView>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginVertical="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/txt_nombreRegistro">
                </TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginVertical="10dp">

                    <EditText
                        android:id="@+id/txtNombres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:backgroundTint="@color/white"
                        android:hint="@string/regTxtHintNombre"
                        android:inputType="text"
                        android:maxLength="27"
                        android:textColor="#5D4037"
                        tools:ignore="TextContrastCheck"></EditText>
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginVertical="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/txt_apellidosRegistro">
                </TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginVertical="10dp">

                    <EditText
                        android:id="@+id/txtApellidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:backgroundTint="@color/white"
                        android:hint="@string/regTxtHintApellido"
                        android:inputType="text"
                        android:maxLength="27"
                        android:textColor="#5D4037"
                        tools:ignore="TextContrastCheck"></EditText>
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginVertical="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/txt_tipoDocumentoRegistro">
                </TextView>

                <Spinner
                    android:id="@+id/tipoDocumento"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="170dp"
                    android:layout_marginTop="170dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="170dp"
                    android:background="@drawable/spinner_bg"
                    android:minHeight="48dp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginVertical="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/txt_numeroDocumentoRegistro">
                </TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginVertical="10dp">

                    <EditText
                        android:id="@+id/txtnumeroDocumento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:backgroundTint="@color/white"
                        android:hint="@string/regTxtHintnumeroDocumento"
                        android:inputType="text"
                        android:maxLength="12"
                        android:textColor="#5D4037"
                        tools:ignore="TextContrastCheck"></EditText>
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginVertical="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/txt_generoRegistro">
                </TextView>
                <RadioGroup
                    android:id="@+id/rbTipoConsulta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginVertical="10dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/rbMasculino"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rbmasculino"
                        android:layout_weight="2"
                        android:checked="true"/>
                    <RadioButton
                        android:id="@+id/rbFemenino"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rbfemenino"
                        android:checked="false"
                        android:layout_marginVertical="0dp"
                        android:layout_weight="2"/>
                    <RadioButton
                        android:id="@+id/rbnoBinario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rbnoBinario"
                        android:layout_marginVertical="0dp"
                        android:checked="false"
                        android:layout_weight="2"/>
                </RadioGroup>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginVertical="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/txt_correoRegistro">
                </TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginVertical="10dp">

                    <EditText
                        android:id="@+id/txtCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:backgroundTint="@color/white"
                        android:hint="@string/regTxtHintCorreoRegistro"
                        android:inputType="textEmailAddress"
                        android:maxLength="27"
                        android:textColor="#5D4037"
                        tools:ignore="TextContrastCheck"></EditText>
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginVertical="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/txt_contraRegistro">
                </TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="190dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginVertical="5dp"
                    app:passwordToggleEnabled="true"
                    >

                    <EditText
                        android:id="@+id/txtContra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:backgroundTint="@color/white"
                        android:hint="@string/regTxtHintContraRegistro"
                        android:inputType="textPassword"
                        android:maxLength="27"
                        android:textColor="#5D4037"
                        tools:ignore="TextContrastCheck"></EditText>
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginVertical="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/txt_contrarepetirRegistro">
                </TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="190dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginVertical="5dp"
                    app:passwordToggleEnabled="true"
                    >

                    <EditText
                        android:id="@+id/txtContraRepetir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:backgroundTint="@color/white"
                        android:hint="@string/regTxtHintContraRepetirRegistro"
                        android:inputType="textPassword"
                        android:maxLength="27"
                        android:textColor="#5D4037"
                        tools:ignore="TextContrastCheck"></EditText>
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btnRegistrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/btnRegistrarRegistro"
                    android:textColor="#FFFFFF"
                    android:layout_marginLeft="30dp"
                    app:cornerRadius="20dp"
                    tools:ignore="TextContrastCheck">
                </Button>
                <Button
                    android:id="@+id/btnVolver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="#FFFFFF"
                    android:text="@string/btnVolverRegistro"
                    android:layout_marginRight="40dp"
                    app:cornerRadius="20dp"
                    tools:ignore="TextContrastCheck">
                </Button>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
